Finished #52. -main.less: commented out footer_wrap, useless code for now. -ProjectController.php: added debug string w/o 'query=...'. -single_project.ctp: deleted outdated header and footer. -basics.less: set min-height for .wrap for better display. -index.ctp: corrected the "Brief Description" to "Description" for the map pop-up, now works. -index.ctp: add an expression to set $index_toolbar for the header. -toolbar.ctp: check if page contains $index_toolbar and displays accordingly. (IA) -toolbar.less: styling for the buttons and search bar.
Issues:
- Unable to style the dropdown arrow for the [projects] button on the index page and on the [login / register] button.
- the search bar on the index page and the search page won't work. please pass to back end.

Committed to SVN.

--- a/app/webroot/css/home/main.less
+++ b/app/webroot/css/home/main.less
@@ -223,7 +223,7 @@ input[type="text"]:focus {
 
 .intro {
     width: 90%;
-    margin: auto auto 10em auto;
+    margin: auto auto 5em auto;
 }
 
 .intro .landing_header {
@@ -345,7 +345,7 @@ input[type="text"]:focus {
 
 /* /////////////////////////////////////FOOTER
 //////////////////////////////////////////////*/
-
+/*
 .footer-wrap {
     background: #3F3F3F;
     height:auto;
@@ -579,6 +579,8 @@ footer#standard-MSU-footer {
     @media print {
       footer#standard-MSU-footer #standard-footer-MSU-wordmark img .screen-msuwordmark {
         display: none; } }
+*/
+
 
 /* #Grid Based Column Widths 
 ================================================== */
