--- a/app/webroot/css/ui/basics.less
+++ b/app/webroot/css/ui/basics.less
@@ -19,6 +19,7 @@ body {
 .wrap {
   height: auto !important;
   height: 100%;
+  min-height: 10em;
   margin: 120px auto -100px;
 }
 .push {
